# AI-Agents-HW4

./: .env-example  .gitignore  README.md  pyproject.toml
artifacts/: GRAPH_REPORT.md  graph.json
config/: agent.json  grphify.json  vault.json
docs/: PLAN.md  PRD.md  PRD_graph_guided_agent.md  PRD_graph_tools.md  PRD_instrumentation_and_comparison.md  PRD_naive_baseline_agent.md  PROMPT_LOG.md  TODO.md
obsidian/: architecture-notes.md  hot.md  index.md
obsidian/components/: httpie.__init__.md  httpie.__main__.md  httpie.cli.md  httpie.client.md  httpie.compat.md  httpie.config.md  httpie.context.md  httpie.core.md  httpie.downloads.md  httpie.input.md  httpie.models.md  httpie.output.__init__.md  httpie.output.formatters.__init__.md  httpie.output.formatters.colors.md  httpie.output.formatters.headers.md  httpie.output.formatters.json.md  httpie.output.formatters.xml.md  httpie.output.processing.md  httpie.output.streams.md  httpie.plugins.__init__.md  httpie.plugins.base.md  httpie.plugins.builtin.md  httpie.plugins.manager.md  httpie.sessions.md  httpie.utils.md
reports/: extensions.md  graph_guided_run.json  impact_report.md  multi_bug_summary.md  naive_run.json  token_comparison.md
src/graphify_agent/: __init__.py  config.py  gatekeeper.py  run_agent.py  sdk.py
src/graphify_agent/services/: code_reader.py  compare.py  (+11 more)
tests/unit/: test_compare.py  test_config.py  test_graph_tools.py  test_grphify_builder.py  test_grphify_report.py  test_instrumentation.py  test_naive_baseline.py  test_sdk.py  test_vault_builder.py  test_vault_io.py  test_workflow.py
(+1 files in other folders)
