[project]
name = "graphify-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RosetteKh", email = "khrosa289@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
graphify-agent = "graphify_agent:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
