[project]
name = "graphify-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RosetteKh", email = "khrosa289@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
]

[project.scripts]
graphify-agent = "graphify_agent:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
exclude = ["data/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
